src/test/deca/syntax/invalid/true_variable.synt
true_variable.deca:11: